<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_widget_view_tools_linerview"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#E0293341"
    android:paddingLeft="135dp"
    android:paddingRight="135dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/tools_magen"
        android:background="@drawable/base_widget_tools_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/btn_scheme"
            android:layout_width="@dimen/home_img"
            android:layout_height="@dimen/home_img"
            android:scaleType="fitXY"
            android:background="@drawable/tools_img_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_scheme"
            android:layout_marginTop="5dp"
            android:textColor="@color/home_tools_textcolsr"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/tools_magen"
        android:background="@drawable/base_widget_tools_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/btn_layerManager"
            android:layout_width="@dimen/home_img"
            android:layout_height="@dimen/home_img"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/tools_img_tc_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_layerManager"
            android:textColor="@color/home_tools_textcolsr"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/tools_magen"
        android:background="@drawable/base_widget_tools_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
   >

        <ImageView
            android:id="@+id/btn_userManager"
            android:layout_width="@dimen/home_img"
            android:layout_height="@dimen/home_img"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/tools_img_user_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_userManager"
            android:layout_marginTop="5dp"
            android:textColor="@color/home_tools_textcolsr"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/tools_magen"
        android:background="@drawable/base_widget_tools_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
       >

        <ImageView
            android:id="@+id/btn_draw"
            android:layout_width="@dimen/home_img"
            android:layout_height="@dimen/home_img"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/tools_img_hz_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_draw"
            android:textColor="@color/home_tools_textcolsr"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/tools_magen"
        android:background="@drawable/base_widget_tools_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/btn_shadow"
            android:layout_width="@dimen/home_img"
            android:layout_height="@dimen/home_img"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/tools_img_yx_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
            android:text="@string/title_shadow"
            android:textColor="@color/home_tools_textcolsr"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/tools_magen"
        android:background="@drawable/base_widget_tools_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
       >

        <ImageView
            android:id="@+id/btn_setting"
            android:layout_width="@dimen/home_img"
            android:layout_height="@dimen/home_img"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/tools_img_setting_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setting"
            android:layout_marginTop="5dp"
            android:textColor="@color/home_tools_textcolsr"
            android:textSize="@dimen/text_size2"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
